--- a/subtask.ipynb
+++ b/subtask.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "fcf87f89",
+   "execution_count": 49,
+   "id": "4e2c7bcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "cb28155a",
+   "execution_count": null,
+   "id": "524da2d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CItem(ctypes.Structure):\n",
+    "    _fields_ = [\n",
+    "                 ('value', ctypes.c_float)\n",
+    "                ]\n",
+    "\n",
+    "def py_list2c_array(py_list, size):\n",
+    "    rowType = CItem * size\n",
+    "    resultType = ctypes.POINTER(CItem) * size\n",
+    "    result = resultType()\n",
+    "    a = [[0] * size for i in range(size)]\n",
+    "    for i in range(size):\n",
+    "        row = rowType()\n",
+    "        for j in range(size):\n",
+    "            row[j] = CItem()\n",
+    "            a = ctypes.c_float(py_list[i][j])\n",
+    "            row[j].value = a.value\n",
+    "        result[i] = ctypes.cast(row, ctypes.POINTER(CItem))\n",
+    "    return ctypes.cast(result, ctypes.POINTER(ctypes.POINTER(CItem)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b57ede36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cLib = ctypes.cdll.LoadLibrary('./tensor_sum.dll')\n",
+    "\n",
+    "cLib.tensor_sum.argtypes = [ctypes.POINTER(ctypes.POINTER(CItem))]\n",
+    "cLib.tensor_sum.restype = ctypes.c_float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "ed757c58",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +64,7 @@
      "output_type": "stream",
      "text": [
       "tensor(20.)\n",
-      "<SumBackward0 object at 0x7fe7cc5e0160>\n",
+      "<SumBackward0 object at 0x7fe7cc621e20>\n",
       "tensor([[1., 1.],\n",
       "        [1., 1.]])\n",
       "tensor([[1., 1.],\n",
@@ -45,65 +85,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "02442ab3",
+   "execution_count": 52,
+   "id": "81147c4a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "93842032237696"
+       "array([[2., 2.],\n",
+       "       [2., 2.]], dtype=float32)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loss.data_ptr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "ed076cee",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "only size-1 arrays can be converted to Python scalars",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-46-6d0f876c5989>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# for i in range(m):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#     a[i] = ctypes.cast((ctypes.c_float * n)(arr[i]), ctypes.POINTER(ctypes.c_float))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mctypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_float\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars"
-     ]
-    }
-   ],
-   "source": [
-    "arr = w1.cpu().detach().numpy()\n",
-    "n = 2\n",
-    "m = 2\n",
-    "# a = (ctypes.POINTER(ctypes.c_float) * n)()\n",
-    "# for i in range(m):\n",
-    "#     a[i] = ctypes.cast((ctypes.c_float * n)(arr[i]), ctypes.POINTER(ctypes.c_float))\n",
-    "# b = (ctypes.c_float * n)(arr[i])"
+    "arr1 = w1.cpu().detach().numpy()\n",
+    "arr2 = w2.cpu().detach().numpy()\n",
+    "\n",
+    "size = 2\n",
+    "c_array1 = py_list2c_array(arr1, size)\n",
+    "c_array2 = py_list2c_array(arr2, size)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9b7f53e",
+   "id": "e9e90fe2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "w1 = Variable(torch.ones(2, 2)*2, requires_grad = True)\n",
-    "w2 = Variable(torch.ones(2, 2)*3, requires_grad = True)\n",
-    "# loss = sum(w1,w2)\n",
+    "loss = cLib.tensor_sum(c_array1, c_array2)     # loss = sum(w1,w2)\n",
+    "print(loss)\n",
     "# loss.backward()\n",
-    "# w1.grad"
+    "w1.grad"
    ]
   }
  ],
