.py for 1d-tensor_sum

--- a/subtask.ipynb
+++ b/subtask.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "4e2c7bcf",
+   "execution_count": 1,
+   "id": "58bcec0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "524da2d1",
+   "execution_count": 2,
+   "id": "45ce3ed2",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CItem(ctypes.Structure):\n",
     "    _fields_ = [\n",
-    "                 ('value', ctypes.c_float)\n",
+    "                 ('value', ctypes.c_double)\n",
     "                ]\n",
     "\n",
     "def py_list2c_array(py_list, size):\n",
@@ -34,93 +34,90 @@
     "        row = rowType()\n",
     "        for j in range(size):\n",
     "            row[j] = CItem()\n",
-    "            a = ctypes.c_float(py_list[i][j])\n",
+    "            a = ctypes.c_double(py_list[i][j])\n",
     "            row[j].value = a.value\n",
     "        result[i] = ctypes.cast(row, ctypes.POINTER(CItem))\n",
-    "    return ctypes.cast(result, ctypes.POINTER(ctypes.POINTER(CItem)))"
+    "    return ctypes.cast(result, ctypes.POINTER(ctypes.POINTER(CItem)))\n",
+    "\n",
+    "def arr2c_arr(arr, size):\n",
+    "    arrType = ctypes.c_double * size\n",
+    "    c_arr = arrType()\n",
+    "    for j in range(size):\n",
+    "        c_arr[j] = ctypes.c_double()\n",
+    "        a = ctypes.c_double(arr[0][j])\n",
+    "        c_arr[j] = a\n",
+    "    return ctypes.cast(c_arr, ctypes.POINTER(ctypes.c_double))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b57ede36",
+   "execution_count": 3,
+   "id": "5b398394",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cLib = ctypes.cdll.LoadLibrary('./tensor_sum.dll')\n",
-    "\n",
-    "cLib.tensor_sum.argtypes = [ctypes.POINTER(ctypes.POINTER(CItem))]\n",
-    "cLib.tensor_sum.restype = ctypes.c_float"
+    "cLib = ctypes.cdll.LoadLibrary('./example-app/build/libexample-app.so')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "ed757c58",
+   "execution_count": 4,
+   "id": "cdad6403",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(20.)\n",
-      "<SumBackward0 object at 0x7fe7cc621e20>\n",
-      "tensor([[1., 1.],\n",
-      "        [1., 1.]])\n",
-      "tensor([[1., 1.],\n",
-      "        [1., 1.]])\n"
+      "9\n"
      ]
     }
    ],
    "source": [
-    "w1 = Variable(torch.ones(2, 2)*2, requires_grad = True)\n",
-    "w2 = Variable(torch.ones(2, 2)*3, requires_grad = True)\n",
-    "loss = torch.sum(w1 + w2)\n",
-    "print(loss.data)\n",
-    "print(loss.grad_fn)\n",
-    "loss.backward()\n",
-    "print(w1.grad)\n",
-    "print(w2.grad)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "81147c4a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2., 2.],\n",
-       "       [2., 2.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr1 = w1.cpu().detach().numpy()\n",
-    "arr2 = w2.cpu().detach().numpy()\n",
+    "cLib.summs.argtypes = [ctypes.c_int]\n",
+    "cLib.summs.restype = ctypes.c_int\n",
     "\n",
-    "size = 2\n",
-    "c_array1 = py_list2c_array(arr1, size)\n",
-    "c_array2 = py_list2c_array(arr2, size)"
+    "summ = cLib.summs(5, 4)\n",
+    "print(summ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9e90fe2",
+   "execution_count": 5,
+   "id": "0ebe0ad8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss = cLib.tensor_sum(c_array1, c_array2)     # loss = sum(w1,w2)\n",
-    "print(loss)\n",
-    "# loss.backward()\n",
-    "w1.grad"
+    "size = 113452\n",
+    "w1 = Variable(torch.ones(1, size)*2, requires_grad = True)\n",
+    "w2 = Variable(torch.ones(1, size)*3, requires_grad = True)\n",
+    "arr1 = w1.cpu().detach().numpy()\n",
+    "arr2 = w2.cpu().detach().numpy()\n",
+    "\n",
+    "c_array1 = arr2c_arr(arr1, size)\n",
+    "c_array2 = arr2c_arr(arr2, size)\n",
+    "\n",
+    "cLib.tensor_sum.argtypes = [ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_double), ctypes.c_int]\n",
+    "cLib.tensor_sum.restype = ctypes.c_double\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d6a910bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "567260.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = cLib.tensor_sum(c_array1, c_array2, ctypes.c_int(size))\n",
+    "print(loss)"
    ]
   }
  ],
